--- a/expensetracker/.env
+++ b/expensetracker/.env
@@ -1,5 +1,9 @@
-export DB_NAME='incomexpensesdb'
-export DB_USER='postgres'
-export DB_PASSWORD='Mu$keteer$666'
-export DB_HOST='localhost'
-export DB_PORT='5432'
+DB_NAME=incomexpensesdb
+DB_USER=postgres
+DB_PASSWORD=Mu$keteer$666
+DB_HOST=localhost
+DB_PORT=5432
+EMAIL_HOST_PASSWORD=rsjg outm ihvq cfev
+EMAIL_HOST_USER=fahmidasalma04@gmail.com
+DEFAULT_FROM_EMAIL=fahmidasalma04@gmail.com
+EMAIL_HOST=smtp.gmail.com
